--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,156 @@
 body {
 	padding-top: 80px;
 }
+
+.trim {
+	display: inline-block;
+}
+li {
+	list-style-type: "- ";
+}
+
+.timeline {
+	width: 100%;
+}
+.timeline .timeline-item {
+	position: relative;
+	width: 50%;
+	margin-left: 50%;
+	padding-bottom: 2.75rem;
+	padding-left: 2.75rem;
+	text-align: left;
+}
+@media (max-width: 767.98px) {
+	.timeline .timeline-item {
+		width: 100%;
+		margin-left: 0;
+	}
+}
+.timeline .timeline-item img {
+	margin-bottom: 1.25rem;
+}
+.timeline .timeline-item:before {
+	content: "";
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 16px;
+	height: 16px;
+	margin-top: 0.425rem;
+	margin-left: -0.5rem;
+	border: 2px solid #eaedf2;
+	border-radius: 50%;
+}
+.timeline .timeline-item:after {
+	content: "";
+	position: absolute;
+	top: 0;
+	left: 0;
+	bottom: -0.1875rem;
+	width: 2px;
+	margin-top: 1.875rem;
+	margin-left: -0.0625rem;
+	background-color: #eaedf2;
+}
+.timeline .timeline-item:nth-child(2n + 1) {
+	margin-left: 0;
+	padding-right: 2.75rem;
+	padding-left: 0;
+	text-align: right;
+}
+@media (max-width: 767.98px) {
+	.timeline .timeline-item:nth-child(2n + 1) {
+		padding-right: 0;
+		padding-left: 2.75rem;
+		text-align: left;
+	}
+}
+.timeline .timeline-item:nth-child(2n + 1):after,
+.timeline .timeline-item:nth-child(2n + 1):before {
+	right: 0;
+	left: auto;
+}
+@media (max-width: 767.98px) {
+	.timeline .timeline-item:nth-child(2n + 1):after,
+	.timeline .timeline-item:nth-child(2n + 1):before {
+		right: auto;
+		left: 0;
+	}
+}
+.timeline .timeline-item:nth-child(2n + 1):before {
+	margin-right: -0.5rem;
+}
+.timeline .timeline-item:nth-child(2n + 1):after {
+	margin-right: -0.0625rem;
+}
+.timeline.dark .timeline-item:before {
+	border: 2px solid #b1bcce;
+}
+.timeline.dark .timeline-item:after {
+	background-color: #b1bcce;
+}
+
+.tree {
+	min-height: 20px;
+	padding: 19px;
+	margin-bottom: 20px;
+	/* background-color: #fbfbfb; */
+	border: 1px solid #999;
+	-webkit-border-radius: 4px;
+	-moz-border-radius: 4px;
+	border-radius: 4px;
+	/* -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+	-moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+	box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05); */
+}
+.tree li {
+	list-style-type: none;
+	margin: 0;
+	padding: 10px 5px 0 5px;
+	position: relative;
+}
+.tree li::before,
+.tree li::after {
+	content: "";
+	left: -20px;
+	position: absolute;
+	right: auto;
+}
+.tree li::before {
+	border-left: 1px solid #999;
+	bottom: 50px;
+	height: 100%;
+	top: 0;
+	width: 1px;
+}
+.tree li::after {
+	border-top: 1px solid #999;
+	height: 20px;
+	top: 25px;
+	width: 25px;
+}
+.tree li span:not(.glyphicon) {
+	-moz-border-radius: 5px;
+	-webkit-border-radius: 5px;
+	border-radius: 5px;
+	display: inline-block;
+	padding: 4px 9px;
+	text-decoration: none;
+}
+/* .tree li.parent_li > span:not(.glyphicon) {
+	cursor: pointer;
+} */
+.tree > ul > li::before,
+.tree > ul > li::after {
+	border: 0;
+}
+.tree li:last-child::before {
+	height: 30px;
+}
+/* .tree li.parent_li > span:not(.glyphicon):hover,
+.tree li.parent_li > span:not(.glyphicon):hover + ul li span:not(.glyphicon) {
+	background: #eee;
+	border: 1px solid #999;
+	padding: 3px 8px;
+	color: #000;
+} */
