--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,10 @@ li {
 	list-style-type: "- ";
 }
 
+.border.border-grey {
+	border-color: #999 !important;
+}
+
 .timeline {
 	width: 100%;
 }
@@ -92,13 +96,13 @@ li {
 
 .tree {
 	min-height: 20px;
-	padding: 19px;
-	margin-bottom: 20px;
+	/* padding: 19px; */
+	/* margin-bottom: 20px; */
 	/* background-color: #fbfbfb; */
-	border: 1px solid #999;
+	/* border: 1px solid #999;
 	-webkit-border-radius: 4px;
 	-moz-border-radius: 4px;
-	border-radius: 4px;
+	border-radius: 4px; */
 	/* -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
 	-moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
 	box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05); */
